support for jdk11+